created: grid container con areas

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!-- css -->
-    <link rel="stylesheet" href="./assets/css/normalize.css">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/normalize.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
 
     <title>Store</title>
-</head>
-<body>
-    
-<p>holaa!</p>
-
-</body>
+  </head>
+  <body>
+    <div class="grid-container">
+      <!-- layout -->
+      <header></header>
+      <section></section>
+      <main></main>
+      <footer></footer>
+    </div>
+  </body>
 </html>
