--- a/index.html
+++ b/index.html
@@ -4,16 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+     <!-- Google Font -->
+     <link rel="preconnect" href="https://fonts.googleapis.com" />
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+     <link
+       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@300;400;700&display=swap"
+       rel="stylesheet"
+     />
+
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/normalize.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
+
+    <!-- Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/d907142f6e.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Store</title>
   </head>
   <body>
     <div class="grid-container">
       <!-- layout -->
-      <header></header>
+      <header>
+        <nav>
+            <!-- logo -->
+             <div class="logo">
+                <img src="./assets/img/logo_ice.png" alt="Logo helados" />
+                <h1 class="roboto-regular">Ice Cream</h1>
+             </div>
+            <!-- boton -->
+            <i class="fa-solid fa-bars fa-2x" style="color: #dcbdff"></i>
+            <!-- <button aria-label="Abrir menú de navegación">☰</button> -->
+        </nav>
+      </header>
       <section></section>
       <main></main>
       <footer></footer>
