created: item de la section filtro

--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
             <!-- <button aria-label="Abrir menú de navegación">☰</button> -->
         </nav>
       </header>
-      <section></section>
+      <section class="roboto-light">
+        <!-- filtro -->
+
+        <div class="filtro">
+          <p>Ordenar Por:</p>
+          <select>
+            <option value="precio">Precio</option>
+          </select>
+        </div>
+
+      </section>
       <main></main>
       <footer></footer>
     </div>
