created: items en footer

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-     <!-- Google Font -->
-     <link rel="preconnect" href="https://fonts.googleapis.com" />
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-     <link
-       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@300;400;700&display=swap"
-       rel="stylesheet"
-     />
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- css -->
     <link rel="stylesheet" href="./assets/css/normalize.css" />
@@ -22,6 +22,11 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- iconos redes -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css"
+    />
+
     <title>Store</title>
   </head>
   <body>
@@ -29,14 +34,14 @@
       <!-- layout -->
       <header>
         <nav>
-            <!-- logo -->
-             <div class="logo">
-                <img src="./assets/img/logo_ice.png" alt="Logo helados" />
-                <h1 class="roboto-regular">Ice Cream</h1>
-             </div>
-            <!-- boton -->
-            <i class="fa-solid fa-bars fa-2x" style="color: #dcbdff"></i>
-            <!-- <button aria-label="Abrir menú de navegación">☰</button> -->
+          <!-- logo -->
+          <div class="logo">
+            <img src="./assets/img/logo_ice.png" alt="Logo helados" />
+            <h1 class="roboto-regular">Ice Cream</h1>
+          </div>
+          <!-- boton -->
+          <i class="fa-solid fa-bars fa-2x" style="color: #dcbdff"></i>
+          <!-- <button aria-label="Abrir menú de navegación">☰</button> -->
         </nav>
       </header>
       <section class="roboto-light">
@@ -48,10 +53,21 @@
             <option value="precio">Precio</option>
           </select>
         </div>
-
       </section>
       <main></main>
-      <footer></footer>
+      <footer class="roboto-regular">
+        <div>
+          <img
+            src="https://img.icons8.com/color/144/facebook-new.png"
+            alt="facebook-new"
+          />
+          <img
+            src="https://img.icons8.com/fluency/48/instagram-new.png"
+            alt="instagram-new"
+          />
+        </div>
+        <p>Todos los derechos reservados</p>
+      </footer>
     </div>
   </body>
 </html>
