created: contenido dentro del main, productos y pagination

--- a/index.html
+++ b/index.html
@@ -54,9 +54,35 @@
           </select>
         </div>
       </section>
-      <main></main>
+
+      <main>
+        <!-- productos -->
+        <div class="card">
+          <img src="./assets/img/helado1.png" alt="Helado 1" />
+          <h2 class="roboto-regular">Frambuesa Almendra</h2>
+          <p class="roboto-light">$2.00</p>
+        </div>
+
+        <!-- paginación -->
+        <ul class="roboto-light">
+          <li>
+            <a href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li>
+            <a href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </main>
+
       <footer class="roboto-regular">
-        <div>
+        <div class="footer-iconos">
           <img
             src="https://img.icons8.com/color/144/facebook-new.png"
             alt="facebook-new"
