--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
           <p class="roboto-light">$2.00</p>
         </div>
 
+        <div class="card">
+          <img src="./assets/img/helado1.png" alt="Helado 1" />
+          <h2 class="roboto-regular">Frambuesa Almendra</h2>
+          <p class="roboto-light">$2.00</p>
+        </div>
+
+        <div class="card">
+          <img src="./assets/img/helado1.png" alt="Helado 1" />
+          <h2 class="roboto-regular">Frambuesa Almendra</h2>
+          <p class="roboto-light">$2.00</p>
+        </div>
+
+        <div class="card">
+          <img src="./assets/img/helado1.png" alt="Helado 1" />
+          <h2 class="roboto-regular">Frambuesa Almendra</h2>
+          <p class="roboto-light">$2.00</p>
+        </div>
+
         <!-- paginación -->
         <ul class="roboto-light">
           <li>
