created: desktop version

--- a/index.html
+++ b/index.html
@@ -57,28 +57,55 @@
 
       <main>
         <!-- productos -->
-        <div class="card">
-          <img src="./assets/img/helado1.png" alt="Helado 1" />
-          <h2 class="roboto-regular">Frambuesa Almendra</h2>
-          <p class="roboto-light">$2.00</p>
-        </div>
+        <div class="cards">
+          <div class="card">
+            <img src="./assets/img/helado1.png" alt="Helado 1" />
+            <h2 class="roboto-regular">Frambuesa Almendra</h2>
+            <p class="roboto-light">$2.00</p>
+          </div>
 
-        <div class="card">
-          <img src="./assets/img/helado1.png" alt="Helado 1" />
-          <h2 class="roboto-regular">Frambuesa Almendra</h2>
-          <p class="roboto-light">$2.00</p>
-        </div>
+          <div class="card">
+            <img src="./assets/img/helado1.png" alt="Helado 1" />
+            <h2 class="roboto-regular">Frambuesa Almendra</h2>
+            <p class="roboto-light">$2.00</p>
+          </div>
 
-        <div class="card">
-          <img src="./assets/img/helado1.png" alt="Helado 1" />
-          <h2 class="roboto-regular">Frambuesa Almendra</h2>
-          <p class="roboto-light">$2.00</p>
-        </div>
+          <div class="card">
+            <img src="./assets/img/helado1.png" alt="Helado 1" />
+            <h2 class="roboto-regular">Frambuesa Almendra</h2>
+            <p class="roboto-light">$2.00</p>
+          </div>
 
-        <div class="card">
-          <img src="./assets/img/helado1.png" alt="Helado 1" />
-          <h2 class="roboto-regular">Frambuesa Almendra</h2>
-          <p class="roboto-light">$2.00</p>
+          <div class="card">
+            <img src="./assets/img/helado1.png" alt="Helado 1" />
+            <h2 class="roboto-regular">Frambuesa Almendra</h2>
+            <p class="roboto-light">$2.00</p>
+          </div>
+
+          <div class="card">
+            <img src="./assets/img/helado1.png" alt="Helado 1" />
+            <h2 class="roboto-regular">Frambuesa Almendra</h2>
+            <p class="roboto-light">$2.00</p>
+          </div>
+
+          <div class="card">
+            <img src="./assets/img/helado1.png" alt="Helado 1" />
+            <h2 class="roboto-regular">Frambuesa Almendra</h2>
+            <p class="roboto-light">$2.00</p>
+          </div>
+
+          <div class="card">
+            <img src="./assets/img/helado1.png" alt="Helado 1" />
+            <h2 class="roboto-regular">Frambuesa Almendra</h2>
+            <p class="roboto-light">$2.00</p>
+          </div>
+
+          <div class="card">
+            <img src="./assets/img/helado1.png" alt="Helado 1" />
+            <h2 class="roboto-regular">Frambuesa Almendra</h2>
+            <p class="roboto-light">$2.00</p>
+          </div>
+
         </div>
 
         <!-- paginación -->
