--- a/index.html
+++ b/index.html
@@ -33,16 +33,26 @@
     <div class="grid-container">
       <!-- layout -->
       <header>
+
         <nav>
           <!-- logo -->
           <div class="logo">
             <img src="./assets/img/logo_ice.png" alt="Logo helados" />
             <h1 class="roboto-regular">Ice Cream</h1>
           </div>
+
           <!-- boton -->
-          <i class="fa-solid fa-bars fa-2x" style="color: #dcbdff"></i>
-          <!-- <button aria-label="Abrir menú de navegación">☰</button> -->
+          <i id="boton-burguer" class="fa-solid fa-bars fa-2x" style="color: #dcbdff"></i>
+          <!-- opciones -->
+            <ul id="menu-opciones" class="roboto-regular">
+              <li><a href="#">Categorias</a></li>
+              <li><a href="#">Promociones</a></li>
+              <li><a href="#">Nuevos productos</a></li>
+              <li><a href="#">Contacto</a></li>
+            </ul>
+          
         </nav>
+
       </header>
       <section class="roboto-light">
         <!-- filtro -->
